--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "ag-grid-community": "^28.2.1",
+    "@ag-grid-enterprise/row-grouping": "^28.2.1",
+    "@ag-grid-enterprise/range-selection": "^28.2.1",
+    "@ag-grid-enterprise/rich-select": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
