--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^28.2.1",
+    "@ag-grid-community/react": "^28.2.1",
+    "@ag-grid-community/styles": "^28.2.1",
+    "@ag-grid-enterprise/column-tool-panel": "^28.2.1",
+    "@ag-grid-enterprise/filter-tool-panel": "^28.2.1",
     "@ag-grid-enterprise/range-selection": "^28.2.1",
     "@ag-grid-enterprise/rich-select": "^28.2.1",
     "@ag-grid-enterprise/row-grouping": "^28.2.1",
+    "@ag-grid-enterprise/set-filter": "^28.2.1",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.0",
