--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@ag-grid-community/client-side-row-model": "^28.2.1",
     "@ag-grid-community/react": "^28.2.1",
     "@ag-grid-community/styles": "^28.2.1",
+    "@ag-grid-enterprise/charts": "^28.2.1",
     "@ag-grid-enterprise/column-tool-panel": "^28.2.1",
     "@ag-grid-enterprise/filter-tool-panel": "^28.2.1",
+    "@ag-grid-enterprise/menu": "^28.2.1",
     "@ag-grid-enterprise/range-selection": "^28.2.1",
     "@ag-grid-enterprise/rich-select": "^28.2.1",
     "@ag-grid-enterprise/row-grouping": "^28.2.1",
