--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "balldontlie_joe",
   "version": "0.1.0",
-  "homepage": "https://joe83830.github.io/balldontlie",
   "private": true,
   "dependencies": {
     "@ag-grid-community/client-side-row-model": "^28.2.1",
@@ -28,7 +27,6 @@
     "@types/react-dom": "^18.0.0",
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
-    "gh-pages": "^4.0.0",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,9 +39,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
